--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,8 +3,53 @@ nav img{
     width: 100px;
 }
 
+#carouselExampleControls{
+    display: flex;
+   max-width: 2000px;
+   max-height: 300px;
 
-
-nav {
-    background-color: blueviolet;
 }
+
+
+
+h1{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:x-large;
+    color: whitesmoke;
+    text-align: center;
+    background-image: url(https://services.meteored.com/img/article/-por-que-las-estrellas-parpadean-de-noche--8371-2_1024.jpg);
+
+}
+
+h2{
+    padding-left: 20px;
+}
+.parrafo{
+    padding: 20px;
+    text-align: justify;
+}
+
+footer{
+    /* background-color: grey; */
+    background-image: url(https://services.meteored.com/img/article/-por-que-las-estrellas-parpadean-de-noche--8371-2_1024.jpg);
+}
+
+    footer h3{
+        font-size: small;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-style: italic;
+        text-align: center;
+        color:whitesmoke;
+        padding: 20px;
+    }
+
+    footer img {
+        max-width: 30px;
+        max-height: 30px; 
+        display:inline-flex;
+        position: relative;
+        left:600px;
+        padding-bottom: 10px;
+        
+        
+    }
