--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,57 @@
+nav img {
+  height: 100px;
+  width: 100px;
+}
 
+#carouselExampleControls {
+  display: flex;
+  max-width: 2000px;
+  max-height: 300px;
+}
+
+h1 {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: x-large;
+  color: whitesmoke;
+  text-align: center;
+  background-image: url(https://services.meteored.com/img/article/-por-que-las-estrellas-parpadean-de-noche--8371-2_1024.jpg);
+}
+
+h2 {
+  padding-left: 20px;
+}
+
+.parrafo {
+  padding: 20px;
+  text-align: justify;
+}
+
+.imgGaleria, .imgTienda {
+  max-width: 500px;
+  max-height: 500px;
+  padding: 20px;
+  box-shadow: 0px 10px 10px -6px black;
+}
+
+footer {
+  /* background-color: grey; */
+  background-image: url(https://services.meteored.com/img/article/-por-que-las-estrellas-parpadean-de-noche--8371-2_1024.jpg);
+}
+footer h3 {
+  font-size: small;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
+  text-align: center;
+  color: whitesmoke;
+  padding: 20px;
+}
+footer img {
+  max-width: 30px;
+  max-height: 30px;
+  display: inline-flex;
+  position: relative;
+  left: 600px;
+  padding-bottom: 10px;
+}
 
 /*# sourceMappingURL=estilos.css.map */
